2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* factory.c: (main): NULL vs. 0.
	* gnome-settings-default-editor.c: (vfs_change_cb): Fix a test to
	use the boolean instead of the return value from a void function.
	This has been sitting in bugzilla forever and now other people start
	adding comments to the code about it so I'm just going to commit.
	* gnome-settings-keybindings.c: (binding_register_keys): ANSIfication.

2004-12-24  Sergey V. Udaltsov  <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: from now on, the applet only works as
	indicator only - all the real stuff is in g-s-d

2004-12-18  Sergey V. Udaltsov  <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: reflect changes in libgswitchit

2004-12-16  Bastien Nocera  <hadess@hadess.net>

	* actions/acme-volume-alsa.c: (acme_volume_alsa_set_mute): mute
	properly when the system has hardware mute, patch from Pierre Ossman
	<drzeus-bugzilla@drzeus.cx> (Closes: #144489)

2004-11-30  Sebastien Bacher  <seb128@debian.org>

	* actions/acme-volume-gstreamer.c:
	(acme_volume_gstreamer_finalize), (acme_volume_gstreamer_set_mute),
	(acme_volume_gstreamer_get_mute),
	(acme_volume_gstreamer_get_volume),
	(acme_volume_gstreamer_set_volume),
	(acme_volume_gstreamer_close_real), (acme_volume_gstreamer_open),
	(acme_volume_gstreamer_close), (acme_volume_gstreamer_init):
	free the alsa device, after 4 seconds, with gstreamer too. 
	Patch from Arnaud Patard <Arnaud Patard> (Closes: #141793).

2004-11-30  Bastien Nocera  <hadess@hadess.net>

	* gnome-settings-multimedia-keys.c: (do_exit_action): hack
	to get the logout action working (Closes: #141472)

2004-11-27  Sergey V. Udaltsov  <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: support for xmodmap introduced

2004-10-28  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-settings-xrdb.c: (append_xresource_file), (apply_settings):
	Don't nuke .Xdefaults when restarting g-s-d. Patch from Nick
	Welch <mack at incise org>. Closes bug #127050.
